public/styles/style.css
/* ... */
/*.navbar-collapse.collapse {*/
/*    opacity: 0;*/
/*}*/

/*@keyframes collapseFadeIn {*/
/*    0% {*/
/*        opacity: 0;*/
/*    }*/
/*    100% {*/
/*        opacity: 1;*/
/*    }*/
/*}*/

/*.faded {*/
/*    opacity: 0.2;*/
/*}*/

/*.navbar-collapse.collapse.show {*/
/*    animation: 0.3s ease-out 0s 1 collapseFadeIn;*/
/*    opacity: 1;*/
/*}*/

.navbar-light .navbar-toggler {
    color: #1d2121;
    border: 1px solid #222;
    border-radius: 6px;
    padding: 4px;
}

.navbar-toggler-icon {
    background-image: url(../images/toggle.png) !important;
}

.show .navbar-nav-scroll .links,
.show .navbar-nav-scroll .links a {
    font-size: 1.7rem !important;
    padding: 8px 0 !important;
}

@keyframes fadeOut {
    0% {
        opacity: 1;
    }
    100% {
        opacity: 0.5;
    }
}

.fade-out {
    animation: 0.3s ease-out 0s 1 fadeOut;
    opacity: 0.5;
}

@keyframes fadeIn {
    0% {
        opacity: 0.5;
    }
    100% {
        opacity: 1;
    }
}

/*.faded {*/
/*    opacity: 0.2;*/
/*}*/

.fade-in {
    animation: 0.3s ease-out 0s 1 fadeIn;
    opacity: 1;
}

.grey666 {
    color: #666 !important;
}

.grey999 {
    color: #999;
    font-size: 75%;
}

/*.navbar-toggler.collapsed {*/
/*    visibility: visible;*/
/*}*/
.skip {
    color: yellow;
    background-color: black;
    float: right;
    transform: skewX(-6deg);
    padding: 4px 14px;
    border: 1px solid white;
    margin-right: 20px;
}

.skip div {
    transform: skewX(6deg);
}

.mobileImages {
    height: 180px;
    width: 33%;
}

.welcomeBackground {
    background: #202020;
}

.welcome {
    display: flex;
    justify-content: center;
    font-size: 5.5vw;
    font-family: Wrong, sans-serif;
}

.welcomeLeak {
    font-size: 5.5vw;
    font-family: Wrong, sans-serif;
    padding-top: 10%;
}

.welcomeSub {
    font-family: Mulish, sans-serif;
    font-size: 1.2vw;
    margin-top: -1%;
}

.textSub {
    font-family: Mulish, sans-serif;
    font-size: 1.1vw;
}

.assetsSub {
    font-family: Mulish, sans-serif;
    font-size: 1.2vw;
    margin-top: -2%;
    text-align: right;
    margin-left: 13%;
}

.summary {
    padding: 15px;
    font-size: 20px;
}

.button {
    border: 1px #a69d0a solid;
    border-radius: 50px;
    font-family: Mulish, sans-serif !important;
    color: black;
    background: #fae901;
    padding: 3px 18px;
    box-shadow: 0 0 6px #ffff0090 !important;
    font-size: 1.2rem;
    text-align: center;
    font-weight: 800;
}

.button.disabled {
    background-color: #888840 !important;
    color: #440 !important;
    cursor: default;
}

.buttonSeed {
    border: 1px #f7f8f8 solid;
    background: #f7f8f8;
    box-shadow: 0 0 6px #ffffff90 !important;
}

.button:hover {
    color: black;
    box-shadow: 0 0 15px blue;
}

@media (max-width: 1000px) {
    .button {
        font-size: 1.5vw !important;
    }

    .buttonSeed {
        font-size: 1.5vw !important;
    }

    .buttonBrowse {
        font-size: 1.5vw !important;
    }
}

.buttonAssets {
    border: 1px #a69d0a solid;
    border-radius: 50px;
    font-weight: bold;
    color: black;
    background: #fae901;
    padding-left: 28%;
    padding-right: 30%;
    padding-top: 4%;
    padding-bottom: 2%;
    box-shadow: 00 15px yellow;
    font-size: 120%;
    cursor: default;
    opacity: 0.5;
}

.buttonLeaks {
    border: 1px #a69d0a solid;
    border-radius: 50px;
    font-weight: bold;
    color: black;
    background: #fae901;
    padding-left: 7%;
    padding-right: 7%;
    padding-top: 1.5%;
    padding-bottom: 1%;
    box-shadow: 0 0 15px yellow;
    font-size: 120%;
    cursor: not-allowed;
    opacity: 0.5;
}

.buttonBrowse {
    border: 1px #a69d0a solid;
    border-radius: 50px;
    font-weight: bold;
    color: black;
    background: #fae901;
    padding-left: 10%;
    padding-right: 10%;
    padding-top: 2.5%;
    padding-bottom: 1.5%;
    box-shadow: 0 0 15px yellow;
    font-size: 110%;
}

.empireButton {
    border: 1px #a69d0a solid;
    border-radius: 50px;
    font-weight: bold;
    color: black;
    background: #fae901;
    padding-left: 5%;
    padding-right: 5%;
    padding-top: 1%;
    padding-bottom: 1%;
    box-shadow: 0 0 15px yellow;
    font-size: 110%;
}

.corePool {
    border: black solid;
    background: #ecdc00;
}

.seedPool {
    border: black solid;
    background: #6512af;
}

.stakingPools {
    padding: 15px;
    font-size: x-large;
}

.social {
    text-align: center;
    font-size: 1.6rem;
    padding-top: 12px;
}

.social a {
    padding: 0 12px;
}

.ranking {
    padding-top: 4%;
    text-align: center;
}

.thirdGangster {
    width: 31vw;
    margin-top: -17%;
    margin-right: 2%;
    position: relative;
    z-index: 3;
}

.title {
    display: flex;
    justify-content: flex-start;
    font-size: 5vw;
    font-family: Wrong, sans-serif;
    padding-top: 80px;
}

.titleRight {
    text-align: right;
    font-size: 5vw;
    font-family: Wrong, sans-serif;
    padding-top: 10%;
}

.exchanges {
    margin-top: -2%;
}

.exchanges img {
    height: 40px !important;
}

.exchanges a {
    padding: 0 3px;
}

.footerNote {
    color: #884;
    font-size: 84%;
    background-color: #00000040;
    font-weight: 200;
    font-family: Mulish, sans-serif;
    padding: 14px;
    max-width: 400px;
    margin: 0 auto;
}

.footerNote a {
    text-decoration: none !important;
}

.footer {
    width: 100%;
    border-top: 1px solid;
    border-color: #ffdd0080 !important;
    background: black;
    z-index: 2;
    position: relative;
}

.seed-container .footer {
    border-color: #7b16db80 !important;
}

.bit-smaller {
    font-size: 1.05vw;
    text-align: center;
}

b,
.two-columns {
    clear: both;
    padding: 0 12px;
    font-size: 0.9rem;
}

.two-columns:last-child {
    margin-bottom: 18px;
}

.two-columns-left {
    float: left;
}

.two-columns-right {
    float: right;
}

.joinUs {
    color: white;
    font-family: Mulish, sans-serif;
    font-weight: 400;
    position: absolute;
}
/* ... */

